# yarppg

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  README.rst  index.html  main.py  mkdocs.yml  objects.inv  process_video.prof  pyproject.toml  requirements-full.txt  requirements-pinned.txt  requirements.txt  ruff.toml  setup.py  style.css
app/: __init__.py  mainwindow.py
app/rppg/: __init__.py  camera.py  roi_detect.py  rppg.py
app/rppg/processors/: __init__.py  chrom.py  color_mean.py  processor.py
app/utils/: multiple_axes_plot.py
cli/: index.html
deepdive/: index.html
docs/: cli.md  deepdive.py  index.md  offline_processing.py  profile_processing.py  ruff.toml  video_processing.py
docs/reference/: containers.md  helpers.md  hr_calculator.md  index.md  rppg.md  settings.md
docs/reference/processors/: chrom.md  index.md  processor.md
docs/reference/roi/: facemesh_detector.md  index.md  selfie_detector.md
docs/reference/ui/: index.md
offline_processing/: index.html
profile_processing/: index.html
reference/: index.html
reference/containers/: index.html
reference/helpers/: index.html
reference/hr_calculator/: index.html
reference/processors/: index.html
reference/processors/chrom/: index.html
reference/processors/processor/: index.html
reference/roi/: index.html
reference/roi/facemesh_detector/: index.html
reference/roi/selfie_detector/: index.html
reference/rppg/: index.html
reference/settings/: index.html
reference/ui/: index.html
search/: search_index.json
src/yarppg/: __init__.py  containers.py  digital_filter.py  helpers.py  hr_calculator.py  main.py  rppg.py  rppg_result.py  settings.py
src/yarppg/_resources/: .gitignore
src/yarppg/processors/: __init__.py  chrom.py  processor.py
src/yarppg/roi/: __init__.py  detector.py  facemesh_segmenter.py  region_of_interest.py  roi_tools.py  selfie_segmenter.py
src/yarppg/ui/: __init__.py  camera.py  main_window.py  simplest.py  (+1 more)
test/processors/: test_color_mean.py
tests/: FaceMesh_FindPoints.ipynb  conftest.py  quicktest.py  test_digital_filter.py  test_helpers.py  test_rppg.py
tests/processors/: test_chrom.py  test_processor.py
tests/roi/: test_region_of_interest.py
video_processing/: index.html
yarppg/: __init__.py  __main__.py  main.py
yarppg/conf/: config.yaml
yarppg/rppg/: __init__.py  camera.py  filters.py  hr.py  roi_detect.py  rppg.py
yarppg/ui/: __init__.py  cli.py  helpers.py  mainwindow.py  multiple_axes_plot.py
(+18 files in other folders)
