[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{ name = "Samuel Pröll", email = "info@samproell.at" }]
description = "Remote Photoplethysmography (rPPG) in Python"
dynamic = ["version"]
dependencies = ["mediapipe", "numpy", "opencv-contrib-python", "scipy"]
license = { file = "LICENSE" }
name = "yarppg"
readme = "README.md"

[project.urls]
repository = "https://github.com/SamProell/yarppg"

[project.scripts]
run-yarppg = "yarppg.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "yarppg.__version__" }
