[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{ name = "Samuel Pröll", email = "info@samproell.at" }]
description = "Remote Photoplethysmography (rPPG) in Python"
dynamic = ["version"]
dependencies = ["mediapipe", "numpy", "opencv-contrib-python", "scipy"]
license = { file = "LICENSE" }
name = "yarppg"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "mkdocs-autorefs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings[python]",
    "pyinstaller",
    "pytest",
]

[project.urls]
repository = "https://github.com/SamProell/yarppg"

[project.scripts]
run-yarppg = "yarppg.main:run_yarppg"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "yarppg.__version__" }
